# Hate

./: .gitignore  CMakeLists.txt  README.md  TODO  build.bat  build.sh  edit.sh  hate.sublime-workspace  make.bat  system.cpp  system.h
bin-make/: CMakeCache.txt  Makefile  cmake_install.cmake
bin-make/src/: Makefile  cmake_install.cmake
bin-make/src/game/: Makefile  cmake_install.cmake
bin-make/src/hate/: Makefile  cmake_install.cmake
bin-make/src/openal/: Makefile  cmake_install.cmake  config.h  openal.pc
res/: input.map  level.level  master.glsl
res/fonts/: droid_sans.fnt  nimbus.fnt
src/: '  CMakeLists.txt  planning.md
src/game/: CMakeLists.txt  main.cpp  player.cpp  player.h  playing_state.cpp  states.h
src/glew/: glew.pc
src/glfw/: CMakeLists.txt
src/hate/: CMakeLists.txt  audio.cpp  audio.h  basic.h  behaviour.h  camera.cpp  camera.h  clock.cpp  clock.h  component.h  core.cpp  core.h  drawable.cpp  drawable.h  entity.cpp  entity.h  entitymanager.cpp  entitymanager.h  gamestate.cpp  gamestate.h  globals.cpp  globals.h  graphics.cpp  graphics.h  hate.cpp  hate.h  input.cpp  input.h  level.cpp  level.h  loader.cpp  loader.h  math.cpp  math.h  matrix.cpp  matrix.h  mesh.cpp  mesh.h  misc.cpp  misc.h  (+18 more)
src/openal/: CMakeLists.txt
src/openal/common/: uintmap.h
